--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ yellow:#bbb10c
 /* global
  */
 
-body {background:transparent url(../images/bg.png) repeat 0 0;}
+body {background:transparent url(images/bg.png) repeat 0 0;}
 .container {width:960px;margin:0 auto;padding-left:40px;margin-top:100px;}
 .span-1, .span-2, .span-3, .span-4 {margin-right:40px;float:left;}
 .span-1 {width:200px;}
@@ -125,19 +125,19 @@ ul {padding-left: 0px;}
 .work-hover {display:none;background:rgba(255,255,255,0.9);}
 .work-hover h1 {text-align:center;margin-top:20px;padding-top:4px;border-top:3px double #999999;border-bottom:3px double #999999;}
 .one:hover .work-hover, .two:hover .work-hover, .three:hover .work-hover, .four:hover .work-hover, .five:hover .work-hover, .six:hover .work-hover, .seven:hover .work-hover, .eight:hover .work-hover, .nine:hover .work-hover, .ten:hover .work-hover, .eleven:hover .work-hover, .twelve:hover .work-hover {display:block;}
-.one {background:transparent url(../images/1.png) no-repeat 0 0;}
+.one {background:transparent url(images/1.png) no-repeat 0 0;}
 .two {height:173px;}
 .two img {margin-top:-23px;margin-left:-71px;z-index:100;position:relative;}
-.three {background:transparent url(../images/3.png) no-repeat 0 0;}
-.four {background:transparent url(../images/4.png) no-repeat 0 0;}
-.five {background:transparent url(../images/5.png) no-repeat 0 0;}
-.six {background:transparent url(../images/drawing2.png) no-repeat -13px -39px;}
-.seven {background:transparent url(../images/7.png) no-repeat 0 0;}
-.eight {background:transparent url(../images/8.png) no-repeat 0 0;}
-.nine {background:transparent url(../images/9.png) no-repeat 0 0;}
-.ten {background:transparent url(../images/10.png) no-repeat 0 0;}
-.eleven {background:transparent url(../images/11.png) no-repeat 0 0;}
-.twelve {background:transparent url(../images/12.png) no-repeat 0 0;}
+.three {background:transparent url(images/3.png) no-repeat 0 0;}
+.four {background:transparent url(images/4.png) no-repeat 0 0;}
+.five {background:transparent url(images/5.png) no-repeat 0 0;}
+.six {background:transparent url(images/drawing2.png) no-repeat -13px -39px;}
+.seven {background:transparent url(images/7.png) no-repeat 0 0;}
+.eight {background:transparent url(images/8.png) no-repeat 0 0;}
+.nine {background:transparent url(images/9.png) no-repeat 0 0;}
+.ten {background:transparent url(images/10.png) no-repeat 0 0;}
+.eleven {background:transparent url(images/11.png) no-repeat 0 0;}
+.twelve {background:transparent url(images/12.png) no-repeat 0 0;}
 
 /* popups */
 .popupbox {height:700px;}
@@ -159,10 +159,10 @@ ul {padding-left: 0px;}
 /* about */
 
 .main-about {margin-top:-155px;border-bottom:4px double #cccccc;padding-bottom:50px;}
-.ultimate {background:#f2f2f2 url(../images/ultimate.png) no-repeat 0 -47px;}
-.travel {background:#f2f2f2 url(../images/travel.png) no-repeat 0 0;}
-.sewing {background:#f2f2f2 url(../images/sewing.png) no-repeat 0 0;}
-.family {background:#f2f2f2 url(../images/family.png) no-repeat 0 -15px;}
+.ultimate {background:#f2f2f2 url(images/ultimate.png) no-repeat 0 -47px;}
+.travel {background:#f2f2f2 url(images/travel.png) no-repeat 0 0;}
+.sewing {background:#f2f2f2 url(images/sewing.png) no-repeat 0 0;}
+.family {background:#f2f2f2 url(images/family.png) no-repeat 0 -15px;}
 .other-interests .sample {box-shadow:inset 0 0 10px 2px rgba(0,0,0,0.6);}
 .other-interests p {text-align:center;margin-top:-10px;color:#666666;font-family:Lato;font-weight:300;}
 span.emphasis {color:#F708A8;}
@@ -190,16 +190,16 @@ li.first {text-align:right;font-weight:300;text-transform:uppercase;}
 .no-bullets {list-style: none; padding: 15px 10px 25px 20px !important; width: 170px;}
 .no-grey-back {margin-top: 11px !important; font-size: 13px; padding: 0 7px !important; text-align: center;}
 .top-margin {margin-top: 75px; margin-bottom: 15px; text-align: center;}
-.emailUs {background: transparent url(../images/emailUs.png) no-repeat 0 2px;}
+.emailUs {background: transparent url(images/emailUs.png) no-repeat 0 2px;}
 .emailUs a {margin: 0 0 5px 598px; color: #F708A8; font-size: 20px;}
 .emailUs a:hover {color: #990568;}
 
 /* crew */
 
-.alyssa {background:#f2f2f2 url(../images/alyssa.png) no-repeat 0 0;}
-.jesse {background:#f2f2f2 url(../images/jesse.png) no-repeat 0 0;}
-.sarah {background:#f2f2f2 url(../images/sarah.png) no-repeat 0 0;}
-.melanie {background:#f2f2f2 url(../images/melanie.png) no-repeat 0 0;}
+.alyssa {background:#f2f2f2 url(images/alyssa.png) no-repeat 0 0;}
+.jesse {background:#f2f2f2 url(images/jesse.png) no-repeat 0 0;}
+.sarah {background:#f2f2f2 url(images/sarah.png) no-repeat 0 0;}
+.melanie {background:#f2f2f2 url(images/melanie.png) no-repeat 0 0;}
 
 /* blog */
 
@@ -243,7 +243,7 @@ section.blog-roll {
 	width: 100%; 
 	position: fixed;
 	background-color: ;
-	background: transparent url(../images/bg.png) repeat 0 0; 
+	background: transparent url(images/bg.png) repeat 0 0; 
 	z-index: 1;
 	box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
 	bottom: 0;
@@ -325,13 +325,18 @@ img.blog-logo {
 	transition: background-color 1s linear .1;
 }
 
+.current-cat {
+
+
+}
+
 /*Blog Post Summaries */
 
 
 .content-container {
 	width:960px;
 	height: 100%;
-	background-image: url(../images/960_8_40.png);
+	background-image: url(images/960_8_40.png);
 	background-repeat: repeat-y;
 	margin:0 auto;
 	position:relative;
@@ -348,8 +353,11 @@ img.blog-logo {
 	margin-bottom: 30px;
 }
 
-.post-summary h3{
-	font-size: 18px;
+.post-summary p{
+
+	font-family:Lato;font-size:18px;font-weight:100;margin-top:0px;margin-bottom:30px;
+	color: #000;
+	text-align: left;
 }
 
 .blogpost {
@@ -486,7 +494,7 @@ p.vennsday {
 */
 .dateblock {
 	float: left;
-	background: transparent url(../images/bg-date.png) no-repeat 0 0;
+	background: transparent url(images/bg-date.png) no-repeat 0 0;
 	height: 75px;
 	margin-right: -80px;
 	margin-top: -15px;
@@ -586,7 +594,7 @@ article h2{
 	margin-bottom: 0;
 }
 
-article h3{
+article h3 {
 	font-family: trebuchet MS;
 	font-weight: lighter;
 	font-style: italic;
