--- a/css/screen.css
+++ b/css/screen.css
@@ -233,6 +233,7 @@ body.proposal {margin: 0 auto;}
 ul.no-bullet-list {list-style: none; padding-left: 7px;}
 ul.no-bullet-list li {margin-bottom: 10px;}
 span.darkText {font-size:46px;margin-right: 10px;margin-bottom:0px;font-family:trebuchet MS;text-transform:uppercase; color: #1E1E27; text-shadow: 3px 2px 0 #CCC;}
+.not-pink p {color: #333333;}
 
 /* proposal nav */
 
