--- a/css/screen.css
+++ b/css/screen.css
@@ -229,12 +229,17 @@ body.proposal {margin: 0 auto;}
 .proposal li a{color: #9F006A;}
 .proposal li a:hover {color: #F708A8;}
 .deliverables {border-radius:1em;background: #E2E2E2;width: 397px;padding-top: 9px;padding-bottom: 20px;}
+.key-pts {border-radius:1em;background: #E2E2E2;width: 900px;padding-top: 9px;padding-bottom: 20px;}
 .proposal h3 {font-size: 23px;margin-top:-6px;}
 ul.no-bullet-list {list-style: none; padding-left: 7px;}
 ul.no-bullet-list li {margin-bottom: 10px;}
 span.darkText {font-size:46px;margin-right: 10px;margin-bottom:0px;font-family:trebuchet MS;text-transform:uppercase; color: #1E1E27; text-shadow: 3px 2px 0 #CCC;}
 .not-pink p {color: #333333;}
 .align-right{text-align: right;margin-top: 6px;}
+#footnote{margin: 0px 0px 3px 40px;}
+#mainheading{margin: 20px 0px 10px 0px;}
+#rhino{float: right; margin: -55px 20px 0px 0px;}
+
 
 /* proposal nav */
 
