riverside research doc

--- a/css/screen.css
+++ b/css/screen.css
@@ -239,7 +239,7 @@ span.darkText {font-size:46px;margin-right: 10px;margin-bottom:0px;font-family:t
 #footnote{margin: 0px 0px 3px 40px;}
 #mainheading{margin: 20px 0px 10px 0px;}
 #rhino{float: right; margin: -55px 20px 0px 0px;}
-
+.research {border-radius:1em;background: #E2E2E2;padding-top: 9px;padding-bottom: 20px; padding-right: 10px;}
 
 /* proposal nav */
 
