added padding-right:10px; to .deliverables in css

--- a/css/screen.css
+++ b/css/screen.css
@@ -228,7 +228,7 @@ body.proposal {margin: 0 auto;}
 .proposal li {font-family:Lato;font-weight:300;}
 .proposal li a{color: #9F006A;}
 .proposal li a:hover {color: #F708A8;}
-.deliverables {border-radius:1em;background: #E2E2E2;width: 397px;padding-top: 9px;padding-bottom: 20px;}
+.deliverables {border-radius:1em;background: #E2E2E2;width: 397px;padding-top: 9px;padding-bottom: 20px; padding-right: 10px;}
 .key-pts {border-radius:1em;background: #E2E2E2;width: 900px;padding-top: 9px;padding-bottom: 20px;}
 .proposal h3 {font-size: 23px;margin-top:-6px;}
 ul.no-bullet-list {list-style: none; padding-left: 7px;}
