--- a/css/screen.css
+++ b/css/screen.css
@@ -364,6 +364,10 @@ span.darkText {font-size:46px;margin-right: 10px;margin-bottom:0px;font-family:t
     display: inline;
 }
 
+.pop-box {
+    display:none ;
+}
+
 /* clearfix */
 
 .cf:before, .cf:after { content: ""; display: table; }
