added vui to the homepage

--- a/css/screen.css
+++ b/css/screen.css
@@ -188,6 +188,7 @@ li.first {text-align:right;font-weight:300;text-transform:uppercase;}
 
 .alyssa {background:#f2f2f2 url(../images/alyssa.png) no-repeat 0 0;}
 .jesse {background:#f2f2f2 url(../images/jesse.png) no-repeat 0 0;}
+.vui {background:#f2f2f2 url(../images/vui.png) no-repeat 0 0;}
 .creature {background:#f2f2f2 url(../images/walrus.png) no-repeat 0 0;}
 .melanie {background:#f2f2f2 url(../images/melanie.png) no-repeat 0 0;}
 .wireframes {background:#f2f2f2 url(../images/tresplace/wireframeMockSM.png) no-repeat 6px 0;}
